--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ body {
     max-width: 100%;
 }
 
-.skillsSection{
+.skillsSection,
+.contactSection {
     background-color: #e74c3c;
     color: #fff;
 }
@@ -153,3 +154,92 @@ body {
     margin-left: -20%;
     color: #444;
 }
+
+.contactButton {
+    color:#fff;
+    padding: 15px 20px;
+    display: inline-block;
+    margin-top: 20px;
+    border: 1px solid #fff;
+    border-radius: 2px;
+}
+
+.contactButton:hover{
+    text-decoration: none;
+    color: #e74c3c;
+    background-color: #fff;
+}
+
+.filter a {
+    color: #bdc3c7;
+    border: 1px solid #bdc3c7;
+    padding: 10px 18px;
+    display: block;
+
+}
+
+.filter li {
+    display: inline-block;
+    padding: 5px;
+}
+
+.filter .current {
+    background-color: #e74c3c;
+    border-color:#e74c3c;
+    color: #fff;
+}
+
+.filter {
+    text-align: center;
+    width: 100%;
+}
+
+.section .heading {
+    text-align: center;
+    padding-bottom: 40px;
+    width: 100%;  
+}
+
+.items li {
+    display: inline-block;
+    padding: 5px;
+}
+
+.itemsContainer {
+    width: 100%;
+}
+
+.items li img {
+    width: 100%;
+}
+
+.items .item {
+    position: relative;
+    display: block;
+    overflow: hidden;
+}
+
+.items .icons {
+    position: absolute;
+    width: 90px;
+    height: 40px;
+    left: 50%;
+    top: 50%;
+    margin: -20px auto 0 -47px;
+    text-align: center;
+    z-index: 3;
+}
+
+.items .icons i {
+    color: #fff;
+    font-size: 20px;
+    margin-top: 9px;
+}
+
+.items a {
+    width: 40px;
+    background-color: #e74c3c;
+    position: relative;
+    display:inline-block;
+}
+
